3-2 Spring Cache 기본 사용법

--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,12 @@ dependencies {
     annotationProcessor "jakarta.annotation:jakarta.annotation-api"
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 
+    // 스프링에서 캐시 사용할 것임
+    implementation 'org.springframework.boot:spring-boot-starter-cache'
+
+    // 캐시는 로컬 캐시 : caffeine을 사용할 것임
+    implementation 'com.github.ben-manes.caffeine:caffeine'
+
     implementation "io.jsonwebtoken:jjwt-api:0.12.5"
     runtimeOnly  "io.jsonwebtoken:jjwt-impl:0.12.5"
     runtimeOnly  "io.jsonwebtoken:jjwt-jackson:0.12.5" // JSON 직렬화
