--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,8 @@ dependencies {
     annotationProcessor "jakarta.annotation:jakarta.annotation-api"
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis' // Redis 추가
+
     // 스프링에서 캐시 사용할 것임
     implementation 'org.springframework.boot:spring-boot-starter-cache'
 
