--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,11 @@
 spring:
-  cache:
-    caffeine:
-      spec: maximumSize=100,expireAfterWrite=10s
+#  cache:
+#    caffeine:
+#      spec: maximumSize=100,expireAfterWrite=10s
+  data:
+    redis:
+      host: localhost
+      port: 6379
   datasource:
     url: jdbc:mysql://localhost:3306/nbcam
     username: root
